Fix related items text on small screens

--- a/static/css/cdrui_styles.css
+++ b/static/css/cdrui_styles.css
@@ -3,10 +3,8 @@
 	float: left;
 	margin: 0px 0 10px 0;
 	padding: 10px 0px;
-	max-height: 150px;
 	text-align: center;
 	overflow: hidden;
-	word-wrap: break-word;
 	border: 1px solid transparent;
 }
 
